# DSAI541-hws

./: .gitignore  .pdm-python  README.md  pyproject.toml
hw1/: DSAI541 Assignment 01 v3.ipynb
hw2/: DSAI541 Assignment 02.html  DSAI541 Assignment 02.ipynb
hw3/: DSAI541 Assignment 03.ipynb
hw4/: DSAI541 Assignment 04.html  DSAI541 Assignment 04.ipynb
