[project]
name = "DSAI541-hws"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mturann", email = "turanmuhammet76@gmail.com"},
]
dependencies = ["ipykernel>=7.2.0", "pandas>=3.0.1", "numpy>=2.4.2", "seaborn>=0.13.2", "matplotlib>=3.10.8", "scikit-learn>=1.8.0", "torch>=2.7.1", "tensorflow>=2.20.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
